[tool.poetry]
name = "stock_screener"
version = "0.1.0"
description = "Stock Screener for canadian stocks"
authors = ["dli <davidli012345@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
cad-tickers = "^0.2.9"
yfinance = "^0.1.54"

[tool.poetry.scripts]
get_stocks = "stock_screener:get_stocks"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
