[tool.poetry]
name = "stock_screener"
version = "0.1.0"
description = "Stock Screener for canadian stocks"
authors = ["dli <davidli012345@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
cad-tickers = "^1.5.2"
yfinance = "^0.1.63"
pandas = "^1.3.3"

[tool.poetry.scripts]
get_stocks = "stock_screener:get_stocks"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
